--- a/assets/css/component/menu.css
+++ b/assets/css/component/menu.css
@@ -315,7 +315,7 @@ a#has-i18n:active > .alt {
 
 #has-l10n summary {
     display: block !important;
-    padding: 3.5pt 1.4ex 3.5pt 3.5pt;
+    padding: 4pt 1.4ex 4pt 4pt;
     font-size: 0.9em;
 }
 
